@@ -30,6 +30,7 @@ source "$APPSDIR/examples/keypadtest/Kconfig"
 source "$APPSDIR/examples/igmp/Kconfig"
 source "$APPSDIR/examples/i2schar/Kconfig"
 source "$APPSDIR/examples/lcdrw/Kconfig"
+source "$APPSDIR/examples/leds/Kconfig"
 source "$APPSDIR/examples/ltdc/Kconfig"
 source "$APPSDIR/examples/media/Kconfig"
 source "$APPSDIR/examples/mm/Kconfig"
